Fri Aug 08 23:09:45 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Groups marked with their collapsed attribute as FALSE are now
	    expanded when first set up.

Fri Aug 08 23:01:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/main.cpp:
	  - The buddy list window is now displayed after all prefs and other
	    core thingies are loaded.

Fri Aug 08 22:12:58 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimImageUtils.cpp:
	* src/QGaimImageUtils.h:
	  - Adding saturation to the icon next to each idle user in the
	    buddy list, and greyed out any offline users.

Fri Aug 08 22:00:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* src/main.cpp:
	  - Added the Show Offline Buddies feature that many users seem to
	    want so badly in a Qtopia IM client.

Fri Aug 08 20:58:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Hooked up the Add Group dialog.

Fri Aug 08 20:05:55 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Added confirmation dialogs and support for deleting buddies,
	    chats, and groups.

Fri Aug 08 19:22:21 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/main.cpp:
	  - qpe-gaim no longer has a window per conversation window, buddy list,
	    and accounts. They merged into one window with a widget stack, which
	    is must cleaner. Patch by Harlekin from OPIE, with some fixes thrown
	    in by me.

Fri Aug 08 17:23:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Buddies with no status emblems weren't getting protocol icons
	    either. Fixed.
